--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <noscript>hahaah. janga nipencet atuh</noscript>
+    <noscript>hahaah. jangan dipencet atuh</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
